--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -12,6 +12,9 @@
   <title>OM Party Planner</title>
 
   <!--   Early Load JS -->
+  <!-- JQurey first to have scripts inside ng-views -->
+  <script src="assets/js/jquery-3.3.1.min.js"></script>
+
   <!--   Angular -->
   <script src="assets/js/angular.js"></script>
   <script src="assets/js/angular-route.js"></script>
@@ -30,28 +33,7 @@
   <script src="app/services/authServices.js"></script>
 
   <!--   CSS for days - Move me or organise it into master -->
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/form.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/label.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/message.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dimmer.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/loader.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/table.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/button.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/sidebar.css">
-  <link rel="stylesheet" type="text/css" href="semantic/dist/components/transition.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 
   <!--   Misc CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -193,7 +175,6 @@
 </div>
 
 <!--   <script src="assets/library/jquery.min.js"></script> -->
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
   <script src="semantic/dist/components/visibility.js"></script>
   <script src="semantic/dist/components/form.js"></script>
   <script src="semantic/dist/components/dropdown.js"></script>
@@ -221,54 +202,9 @@
       $('.ui.sidebar')
         .sidebar('attach events', '.toc.item')
       ;
-
     })
   ;
   </script>
-
-  <script>
-  (function ($) {
-    $('.ui.form').form({        
-      name: {
-        identifier: 'name',
-        rules: [{
-          type: 'empty',
-          prompt: 'Please enter your given name'
-        }]
-      },           
-      username: {
-        identifier: 'username',
-        rules: [{
-          type: 'empty',
-          prompt: 'Please enter a username'
-        }]
-      },       
-      email: {
-        identifier: 'email',
-        rules: [{
-          type: 'empty',
-          prompt: 'Please enter your email'
-        },{
-          type: 'email',
-          prompt: 'Please enter a valid email'
-        }]
-      },       
-      password: {
-        identifier: 'password',
-        rules: [{
-          type: 'empty',
-          prompt: 'Please enter a password'
-        },{
-          type: 'length[8]',
-          prompt: 'Password needs to be atleast 6 characters long'
-        }]
-      }
-    }, {
-      on: 'blur',
-      inline: 'true'
-    });
-  }(jQuery));
-</script> 
 
 </body>
 </html>
