Checkpoint, emails sending

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -55,7 +55,7 @@
         <a href="/register" class="ui primary button">Register</a>
       </div>
       <div class="item">
-        <a href="/logout" class="ui primary button"">Logout</a>
+        <a href="/logout" class="ui primary button">Logout</a>
       </div>
     </div>
   </div>
