Activation and resend link working

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -25,6 +25,7 @@
   <script src="app/routes.js"></script>
 
   <!-- Angular Controllers -->
+  <script src="app/controllers/emailCtrl.js"></script>
   <script src="app/controllers/userCtrl.js"></script>
   <script src="app/controllers/mainCtrl.js"></script>
 
