--- a/public/app/views/pages/users/profile.html
+++ b/public/app/views/pages/users/profile.html
@@ -9,7 +9,7 @@
 	    </tr>
 		</thead><tbody>
 			<tr>
-				<td>{{ main.name }}</td>
+				<td>{{ main.fullname }}</td>
 	    		<td>{{ main.username }}</td>
 	    		<td>{{ main.useremail }}</td>
 	    	</tr>
