Buttons for editing fields .. They do nothing

--- a/public/app/views/pages/users/profile.html
+++ b/public/app/views/pages/users/profile.html
@@ -3,15 +3,17 @@
 
 	<table class="ui inverted primary table">
 		<thead>
-		  <th>Name</th>
-	      <th>Username</th>
-	      <th>Email</th> 
+		  <th><a><i class="edit primary icon"></i></a>&nbsp Name</th>
+	      <th><a><i class="edit primary icon"></i></a>&nbsp Username</th>
+	      <th><a><i class="edit primary icon"></i></a>&nbsp Email</th>
+	      <th><a><i class="edit primary icon"></i></a>&nbsp Password<th> 
 	    </tr>
 		</thead><tbody>
 			<tr>
 				<td>{{ main.fullname }}</td>
 	    		<td>{{ main.username }}</td>
 	    		<td>{{ main.useremail }}</td>
+	    		<td>***********</td>
 	    	</tr>
 		</tbody>   
 	</table>
