--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -32,6 +32,10 @@
   </div>
 
   <button ng-disabled="main.disabled" class="ui huge primary button" type="submit">Login</button>
+  <br>
+  <br>
+  <a href=""><button ng-disabled="main.disabled" class="ui medium secondary inverted button" type="submit">Forgot Username?</button></a>
+  <a href=""><button ng-disabled="main.disabled" class="ui medium secondary inverted button" type="submit">Forgot Password?</button></a>
 </form>
 
 
