--- a/public/app/views/pages/users/login.html
+++ b/public/app/views/pages/users/login.html
@@ -34,8 +34,8 @@
   <button ng-disabled="main.disabled" class="ui huge primary button" type="submit">Login</button>
   <br>
   <br>
-  <a href=""><button ng-disabled="main.disabled" class="ui medium secondary inverted button" type="submit">Forgot Username?</button></a>
-  <a href=""><button ng-disabled="main.disabled" class="ui medium secondary inverted button" type="submit">Forgot Password?</button></a>
+  <a href="/resetUsername"><button ng-disabled="main.disabled" class="ui medium secondary inverted button" type="button">Forgot Username?</button></a>
+  <a href="/resetUsername"><button ng-disabled="main.disabled" class="ui medium secondary inverted button" type="button">Forgot Password?</button></a>
 </form>
 
 
