Small formatting changes

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -162,13 +162,12 @@
           <div class="ui inverted link list">
             <a href="#" class="item">Sitemap</a>
             <a href="#" class="item">Contact Us</a>
-            <a href="#" class="item">Religious Ceremonies</a>
-            <a href="#" class="item">Gazebo Plans</a>
+            <a href="#" class="item">I don't know</a>
           </div>
         </div>
         <div class="seven wide column">
           <h4 class="ui inverted header">Footer Header</h4>
-          <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
+          <p>This div is blank</p>
         </div>
       </div>
     </div>
