Password chaning working

--- a/public/app/views/pages/users/profile.html
+++ b/public/app/views/pages/users/profile.html
@@ -6,7 +6,7 @@
 		  <th><a><i class="edit primary icon"></i></a>&nbsp Name</th>
 	      <th><a><i class="edit primary icon"></i></a>&nbsp Username</th>
 	      <th><a><i class="edit primary icon"></i></a>&nbsp Email</th>
-	      <th><a><i class="edit primary icon"></i></a>&nbsp Password<th> 
+	      <th><a href="/editPassword"><i class="edit primary icon"></i></a>&nbsp Password<th> 
 	    </tr>
 		</thead><tbody>
 			<tr>
