Username and password change working

--- a/public/app/views/pages/users/editDetails/editPassword.html
+++ b/public/app/views/pages/users/editDetails/editPassword.html
@@ -1,36 +1,36 @@
 <h1>Change Password</h1>
 <p></p>
 <div class="ui inverted segment">
-<form class="ui form success error" ng-submit="edit.changePassword(pwdData);">
+<form class="ui form success error" ng-submit="editPwd.changePassword(pwdData);">
   <div class="three fields">
     <br>
     <div class="field">
       <label class="ui black label">Username</label>
-      <input ng-disabled="edit.disabled" placeholder="Username" type="text" name="username" ng-model="edit.pwdData.username">
+      <input ng-disabled="editPwd.disabled" placeholder="Username" type="text" name="username" ng-model="editPwd.pwdData.username">
     </div>
     <div class="field">
       <label class="ui black label">Old Password</label>
-      <input ng-disabled="edit.disabled" placeholder="Old Password" type="password" name="oldPassword" ng-model="edit.pwdData.oldPassword">
+      <input ng-disabled="editPwd.disabled" placeholder="Old Password" type="password" name="oldPassword" ng-model="editPwd.pwdData.oldPassword">
     </div>
     <div class="field">
       <label class="ui black label">New Password</label>
-      <input ng-disabled="edit.disabled" placeholder="Password" type="password" name="newPassword" ng-model="edit.pwdData.newPassword">
+      <input ng-disabled="editPwd.disabled" placeholder="Password" type="password" name="newPassword" ng-model="editPwd.pwdData.newPassword">
     </div>
   </div>
 
-  <div class="ui active dimmer" ng-show="edit.loading">
+  <div class="ui active dimmer" ng-show="editPwd.loading">
     <div class="ui text loader">Looking for Seán FitzPatrick...</div>
   </div>
 
-  <div class="ui success message" ng-show="edit.successMsg">
+  <div class="ui success message" ng-show="editPwd.successMsg">
     <div class="header">All Set</div>
-    <p>{{ edit.successMsg }}</p>
+    <p>{{ editPwd.successMsg }}</p>
   </div>
 
-  <div class="ui error message" ng-show="edit.failMsg">
+  <div class="ui error message" ng-show="editPwd.failMsg">
     <div class="header">Uh Oh</div>
-    <p>{{ edit.failMsg }}</p>
+    <p>{{ editPwd.failMsg }}</p>
   </div>
 
-  <button ng-disabled="edit.disabled" class="ui huge primary button" type="submit">edit</button>
+  <button ng-disabled="editPwd.disabled" class="ui huge primary button" type="submit">Edit</button>
 </form>
