--- a/public/app/views/pages/users/profile.html
+++ b/public/app/views/pages/users/profile.html
@@ -4,7 +4,7 @@
 	<table class="ui inverted primary table">
 		<thead>
 		  <th><a><i class="edit primary icon"></i></a>&nbsp Name</th>
-	      <th><a><i class="edit primary icon"></i></a>&nbsp Username</th>
+	      <th><a href="/editUsername"><i class="edit primary icon"></i></a>&nbsp Username</th>
 	      <th><a><i class="edit primary icon"></i></a>&nbsp Email</th>
 	      <th><a href="/editPassword"><i class="edit primary icon"></i></a>&nbsp Password<th> 
 	    </tr>
