--- a/public/app/views/pages/managment/management.html
+++ b/public/app/views/pages/managment/management.html
@@ -11,7 +11,7 @@
         </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="person in manage.users" repeat-done="manage.initDataTable">
+            <tr ng-repeat="person in manage.users | limitTo: manage.limit">
                 <td>{{ person.name }}</td>
                 <td>{{ person.username }}</td>
                 <td>{{ person.email }}</td>
