Table page filtering working

--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -15,9 +15,9 @@
   <!-- JQurey first to have scripts inside ng-views -->
   <script src="assets/js/jquery-3.3.1.min.js"></script>
 
-  <!-- JS for data table wizardry -->
+  <!-- JS for data table wizardry
   <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/1.10.16/js/dataTables.semanticui.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.16/js/dataTables.semanticui.min.js"></script> -->
 
   <!--   Angular -->
   <script src="assets/js/angular.js"></script>
@@ -45,8 +45,8 @@
   <!--   Misc CSS -->
   <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.semanticui.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.semanticui.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.semanticui.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/dataTables.semanticui.min.css"> -->
 
 
 </head>
