--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,11 +2,15 @@ main {
 	padding-top: 30px;
 }
 
+.showmore {
+  display: inline;
+}
+
 header .navbar {
 	border-radius: 0;
 }
 
-.show-hide-message.ng-hide-remove {
+/* .show-hide-message.ng-hide-remove {
 	.webkit-animation:zoomIn 0.3s both ease;
 	.moz-animation:zoomIn 0.3s both ease;
 	animation:zoomIn 0.3s both ease;
@@ -16,7 +20,7 @@ header .navbar {
 	.webkit-animation:spin 1s infinite;
 	.moz-animation:spin 1s infinite;
 	animation:spin 1s infinite;
-}
+} */
 
 @keyframes spin {
 	from { transform:rotate(0deg); }
