--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -187,12 +187,12 @@
 
 
   <!-- JS for semantic components -->
-  <script src="semantic/dist/components/visibility.js"></script>
-  <script src="semantic/dist/components/form.js"></script>
+  <script src="semantic/dist/semantic.min.js"></script>
+  <!-- <script src="semantic/dist/components/form.js"></script>
   <script src="semantic/dist/components/dropdown.js"></script>
   <script src="semantic/dist/components/dimmer.js"></script>
   <script src="semantic/dist/components/sidebar.js"></script>
-  <script src="semantic/dist/components/transition.js"></script>
+  <script src="semantic/dist/components/transition.js"></script> -->
   <script>
   $(document)
     .ready(function() {
